[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ludarium"
version = "0.1.0"
description = "A Roman-themed entertainment console interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
ludarium = "Ludarium.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
